Refactor the code

--- a/blog.html
+++ b/blog.html
@@ -14,10 +14,8 @@
     </nav>
   </header>
   <main>
-    <section class="blog">
-
+    <section>
       <article>
-
         <div class="blog-container">
           <div class="blog-box">
             <img src="assests/media/pic01.png" alt="bulb" class="blog-image">
@@ -32,11 +30,8 @@
               <button class="btn success">Read More</button>
           </div>
         </div>
-
       </article>
-
       <article>
-
         <div class="blog-container">
           <div class="article-container">
             <div class="blog-box">
@@ -51,9 +46,8 @@
               </p>
               <a href="#" class="article-link">Learn More</a>
             </div>
-          </div>
-
-          <div class="article-container">
+          </div><!--
+          --><div class="article-container">
             <div class="blog-box">
               <img src="assests/media/pic02.png" alt="keyboard and coffee" class="blog-image">
             </div>
@@ -67,11 +61,8 @@
               <a href="#" class="article-link">Learn More</a>
             </div>
           </div>
-
         </div>
-
       </article>
-
     </section>
   </main>
 </body>
