--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog</title>
+  <title>Home</title>
   <link rel="stylesheet" href="assests/styles.css">
 </head>
 <body id="home">
@@ -40,20 +40,16 @@
     <hr>
     <section class="content-2">
       <p class="section-text">Exercise Two</p>
-      <div class="parent-container">
-        <div class="container"><!--
-          --><div class="box"></div><!--
-          --><div class="box"></div><!--
-          --><div class="box"></div>
-        </div>
+      <div class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
       </div>
       <hr>
-      <div class="parent-container">
-        <div class="container"><!--
-        --><div class="box box-2"></div><!--
-        --><div class="box box-2"></div><!--
-        --><div class="box box-2"></div>
-        </div>
+      <div class="container">
+        <div class="box box-2"></div>
+        <div class="box box-2"></div>
+        <div class="box box-2"></div>
       </div>  
     </section>
   </main>
