--- a/blog.html
+++ b/blog.html
@@ -31,38 +31,36 @@
           </div>
         </div>
       </article>
-      <article>
-        <div class="blog-container">
-          <div class="article-container">
-            <div class="blog-box">
-              <img src="assests/media/pic03.png" alt="work" class="blog-image">
-            </div>
-            <div class="blog-box">
-              <header>
-                <h3 class="article-heading">1914 translation by H. Rackham</h3>
-              </header>
-              <p class="blog-text">
-                But i must explain to you how this mistaken idea of denouncing pleasure and praising pain was born and i will give you a complete account of the system.
-              </p>
-              <a href="#" class="article-link">Learn More</a>
-            </div>
-          </div><!--
-          --><div class="article-container">
-            <div class="blog-box">
-              <img src="assests/media/pic02.png" alt="keyboard and coffee" class="blog-image">
-            </div>
-            <div class="blog-box">
-              <header>
-                <h3 class="article-heading">Lorem Ipsum is simply dummy text of the printing and typesetting</h3>
-              </header>
-              <p class="blog-text">
-                But i must explain to you how this mistaken idea of denouncing pleasure and praising pain was born and i will give you a complete account of the system.
-              </p>
-              <a href="#" class="article-link">Learn More</a>
-            </div>
+      <div class="blog-container">
+        <article class="article-container">
+          <div class="blog-box">
+            <img src="assests/media/pic03.png" alt="work" class="blog-image">
           </div>
-        </div>
-      </article>
+          <div class="blog-box">
+            <header>
+              <h3 class="article-heading">1914 translation by H. Rackham</h3>
+            </header>
+            <p class="blog-text">
+              But i must explain to you how this mistaken idea of denouncing pleasure and praising pain was born and i will give you a complete account of the system.
+            </p>
+            <a href="#" class="article-link">Learn More</a>
+          </div>
+        </article>
+        <article class="article-container">
+          <div class="blog-box">
+            <img src="assests/media/pic02.png" alt="keyboard and coffee" class="blog-image">
+          </div>
+          <div class="blog-box">
+            <header>
+              <h3 class="article-heading">Lorem Ipsum is simply dummy text of the printing and typesetting</h3>
+            </header>
+            <p class="blog-text">
+              But i must explain to you how this mistaken idea of denouncing pleasure and praising pain was born and i will give you a complete account of the system.
+            </p>
+            <a href="#" class="article-link">Learn More</a>
+          </div>
+        </article>
+      </div>
     </section>
   </main>
 </body>
